--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wedding-planner",
-  "homepage": "https://MdSHiFaTRaHMaN.github.io/Dream-Wedding",
+  "homepage": "https://mdshifatrahman.github.io/Dream-Wedding",
   "private": true,
   "version": "0.0.0",
   "type": "module",
